# AIONIC

./: PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  RESEARCH_PAPER_FRAMEWORK.md
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
src/aionic/: __init__.py
src/aionic/agents/: automation_agent.py  base_agent.py  rag_agent.py  research_agent.py
src/aionic/builder/: __init__.py  agent_builder.py  project_blueprints.py  registry.py  tool_builder.py
src/aionic/core/: __init__.py  agent.py  context.py  orchestrator.py  task.py  tool.py
src/aionic/examples/: __init__.py  basic_example.py  builder_demo.py  llm_example.py  role_switching_example.py
src/aionic/llm/: __init__.py  base.py  config.py  models.py  registry.py  router.py
src/aionic/llm/providers/: __init__.py  claude_provider.py  gemini_provider.py  groq_provider.py  local_model_provider.py  openai_provider.py
src/aionic/memory/: __init__.py  audit_logger.py  memory_store.py
src/aionic/security/: __init__.py  autonomy_policy.py
src/aionic/tools/: base_tools.py
